# youtube-analytics-project

./: pyproject.toml
homework-1/: main.py  main1.py
homework-2/: main.py  main2.py  moscowpython.json
homework-3/: main.py
homework-4/: main.py
homework-6/: main.py
src/: channel.py  playlist.py  video.py
