[tool.poetry]
name = "youtube-analytics-project2"
version = "0.1.0"
description = ""
authors = ["VladimirKovaliev <kovaliev.v@list.ru>"]
readme = "README.md"
packages = [{include = "youtube_analytics_project2"}]

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.99.0"
isodate = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
